# sandbox

./: .clang-format  CMakeLists.txt  README.md  conanfile.py
.devcontainer/: Dockerfile  devcontainer.json
src/app_factory/: App.hpp  AppFactory.hpp  CMakeLists.txt  Service.hpp  test.cpp
src/rearrange_bits/: CMakeLists.txt  main.cpp  rearrange_bits.hpp
src/visitor_vs_virtual/: CMakeLists.txt  main.cpp  virtualized.cpp  virtualized.hpp  visitor.cpp  visitor.hpp
